# airflow-dags

./: .all-contributorsrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: _dag_deploy.yml  branch_ci.yml  deploy.yml  merged_ci.yml  tagged_ci.yml
src/airflow_dags.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/airflow_dags/dags/india/: check-api.py  consume-nwp-dag.py  consume-runvnl-dag.py  consume-ruvnl-dag.py  consume-sat-dag.py  elasticbeanstalk.py  forecast-site-dag.py  manage-elasticbeanstalk-dag.py  nwp-dag.py  remove-old-logs.py  runvnl-data-dag.py  satellite-dag.py
src/airflow_dags/dags/uk/: api-national-gsp-check.py  check-api-national-gsp.py  check-api-site.py  cloudcasting-dag.py  consume-ned-nl-dag.py  consume-neso-dag.py  consume-nwp-dag.py  consume-nwp-nl-dag.py  consume-pv-dag.py  consume-pvlive-dag.py  consume-sat-dag.py  dayafter-dag.py  elasticbeanstalk.py  forecast-clouds-dag.py  forecast-gsp-dag.py  forecast-national-dag.py  forecast-ned-nl-dag.py  forecast-site-dag.py  forecast-site-nl-dag.py  manage-elasticbeanstalk-dag.py  metrics-dag.py  neso-consumer-dag.py  nwp-dag.py  pv-dag.py  pvlive-dag.py  remove-old-logs.py  sat-dag.py  satellite-dag.py
src/airflow_dags/plugins/callbacks/: slack.py
src/airflow_dags/plugins/operators/: ecs_run_task_operator.py
src/airflow_dags/plugins/scripts/: api_checks.py  elastic_beanstalk.py  remove_old_logs.py  s3.py
tests/: test_import.py
